--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link data-trunk rel="copy-dir" href="static"/>
+    <link data-trunk rel="scss" href="sass/index.scss"/>
+    <link data-trunk rel="rust"/>
+
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+  </head>
+
   <body></body>
 </html>
